--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -1,69 +1,71 @@
 ﻿@model IEnumerable<BlockTechMVC.Models.Transacao>
 
 @{
-    ViewData["Title"] = "Transações";
+    ViewData["Title"] = "Index";
 }
 
-<h1>@ViewData["Title"]</h1>
+<h1>Index</h1>
 
-<br />
-<br />
-
-@*<p>
-        <a asp-action="Create">Adicionar</a>
-    </p>*@
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Data)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Tipo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CriptomoedaHoje.Criptomoeda.Nome)
+                @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Valor)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CriptomoedaHoje)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ContaCliente)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CriptoSaldo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Saldo)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Tipo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Criptomoeda.Nome)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Valor)
-                </td>
-                <td>
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-outline-dark">Editar</a>
-                    }
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-outline-dark">Detalhes</a>
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-outline-dark">Deletar</a>
-                    }
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Tipo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Data)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Valor)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContaCliente.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CriptoSaldo.Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Saldo.Id)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
