--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Index">Início</a>
                         </li>
+                      @if (User?.Identity.IsAuthenticated == true)
+                      {
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
@@ -33,6 +35,7 @@
                                 <a class="nav-link text-white" asp-area="" asp-controller="Criptomoedas" asp-action="Index">Criptomoedas</a>
                             </li>
                         }
+
                         @if (User.IsInRole("Admin"))
                         {
                             <li class="nav-item">
@@ -51,6 +54,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="ContaClientes" asp-action="Index">Conta</a>
                         </li>
+
+                      }
                     </ul>
                 </div>
             </div>
