--- a/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Index.cshtml
@@ -19,6 +19,17 @@
                 @Html.DisplayNameFor(model => model.NumeroConta)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.Conta.Banco)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Conta.Agencia)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Conta.NumeroConta)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Conta.TipoConta)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -33,6 +44,19 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NumeroConta)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conta.Banco)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conta.Agencia)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Conta.NumeroConta)
+            </td>
+            
+            <td>
+                @Html.DisplayFor(modelItem => item.Conta.TipoConta)
             </td>
             <td>
                 @if (User.IsInRole("Admin"))
