--- a/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Criptomoedas/Index.cshtml
@@ -27,7 +27,7 @@
         <thead>
             <tr class="bg-dark text-white">
                 <th>
-                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class="text-white"})
+                    @Html.ActionLink("Nome", "Index", new { sortOrder = ViewBag.NameSortParm }, new { @class = "text-white imgOrder" })
                 </th>
                 <th></th>
                 <th>
@@ -36,7 +36,8 @@
                 <th></th>
                 <th>
 
-                    @Html.ActionLink("Cadastro", "Index", new { sortOrder = ViewBag.DateSortParm }, new { @class = "text-white" })
+                    @Html.ActionLink("Cadastro", "Index", new { sortOrder = ViewBag.DateSortParm }, new { @class = "text-white imgOrder" })
+                    @*<img src="~/images/ordenar.png" alt="Setas que indicam a ordenação das criptomoedas por data em que foram registradas" sizes="20" />*@
                 </th>
                 <th></th>
                 <th style="white-space: nowrap"></th>
