--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -54,6 +54,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="ContaClientes" asp-action="Index">Conta</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Relatorios">Relatórios</a>
+                        </li>
 
                       }
                     </ul>
