--- a/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Details.cshtml
@@ -1,42 +1,38 @@
 ﻿@model BlockTechMVC.Models.ContaCliente
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>ContaCliente</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NumeroConta)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NumeroConta)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DataAbertura)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DataAbertura)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ApplicationUserID)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ApplicationUser.Nome)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ApplicationUserID)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ApplicationUser.Nome)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Conta)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NumeroConta)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Conta.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NumeroConta)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Editar</a> 
+    }
+<a asp-action="Index">Voltar</a>
 </div>
