--- a/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Edit.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContaClientes/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model BlockTechMVC.Models.ContaCliente
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Editar";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>ContaCliente</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,9 +22,9 @@
                 <input asp-for="DataAbertura" class="form-control" />
                 <span asp-validation-for="DataAbertura" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group hide">
                 <label asp-for="ApplicationUserID" class="control-label"></label>
-                <input asp-for="ApplicationUserID" class="form-control" />
+                <select asp-for="ApplicationUserID" class="form-control" asp-items="ViewBag.UserId"></select>
                 <span asp-validation-for="ApplicationUserID" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -41,7 +40,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar</a>
 </div>
 
 @section Scripts {
