Adicionando dados e alterando pág. de transações

--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -1,14 +1,15 @@
 ﻿@model IEnumerable<BlockTechMVC.Models.Transacao>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Transações";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@*<p>
+    <a asp-action="Create">Adicionar</a>
+</p>*@
+
 <table class="table">
     <thead>
         <tr>
@@ -49,10 +50,10 @@
                 @Html.DisplayFor(modelItem => item.Valor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Id)
+                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Criptomoeda.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ContaCliente.Id)
+                @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CriptoSaldo.Id)
@@ -61,9 +62,9 @@
                 @Html.DisplayFor(modelItem => item.Saldo.Id)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
 }
