--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Index.cshtml
@@ -14,26 +14,26 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Tipo)
+                @Html.DisplayNameFor(model => model.Data)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Data)
+                @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Tipo)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Valor)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CriptomoedaHoje)
+                @Html.DisplayNameFor(model => model.CriptomoedaHoje.Criptomoeda.Nome)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ContaCliente)
+                @Html.DisplayNameFor(model => model.CriptoSaldo.Quantidade)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CriptoSaldo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Saldo)
-            </th>
+            @*<th>
+            @Html.DisplayNameFor(model => model.Saldo.SaldoAtualRS)
+        </th>*@
             <th></th>
         </tr>
     </thead>
@@ -41,29 +41,29 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Data)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Criptomoeda.Nome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ContaCliente.ApplicationUser.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CriptoSaldo.Id)
+                @Html.DisplayFor(modelItem => item.Tipo)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Saldo.Id)
+                R$ @Html.DisplayFor(modelItem => item.Valor)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a> |
+                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Criptomoeda.Nome)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CriptoSaldo.Quantidade)
+            </td>
+            @*<td>
+            R$ @Html.DisplayFor(modelItem => item.Saldo.SaldoAtualRS)
+        </td>*@
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Detalhes</a>
                 <a asp-action="Delete" asp-route-id="@item.Id">Deletar</a>
             </td>
         </tr>
