Aplicações e Conta - VIEW

--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -52,7 +52,10 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Index">Transações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="ContaClientes" asp-action="Index">Conta</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="ContasClientes" asp-action="Index">Conta</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="ContasClientes" asp-action="Aplicacoes">Aplicações</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Relatorios">Relatórios</a>
