Restrigindo visualização apenas ao adm

--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Index.cshtml
@@ -24,9 +24,12 @@
                 <th>
                     @Html.DisplayNameFor(model => model.ContaCliente.DataAbertura)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
-                </th>
+                @*@if (User.IsInRole("Admin"))
+                {*@
+                    <th>
+                        @Html.DisplayNameFor(model => model.ContaCliente.ApplicationUser.Nome)
+                    </th>
+                @* } *@
                 <th>
                     @Html.DisplayNameFor(model => model.ContaCliente.NumeroConta)
                 </th>
