--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model BlockTechMVC.Models.Transacao
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalhes";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>Transacao</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
