--- a/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/ContasClientes/Details.cshtml
@@ -33,6 +33,7 @@
         <dd class="col-sm-10">
             R$ @Html.DisplayFor(model => model.Saldo.SaldoAtualRS)
         </dd>
+        Conta Vinculada <br />
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ContaCliente.Conta.Banco)
         </dt>
