Testes charts - incompleto *

--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
@@ -1,7 +1,21 @@
 ﻿
-@{
-    ViewData["Title"] = "Relatorios";
-}
+@using System.Web.Helpers
 
-<h1>@ViewData["Title"]</h1>
+    @{
+        ViewData["Title"] = "Relatórios";
 
+    }
+
+    <h1>@ViewData["Title"]</h1>
+
+    <div>
+       @{ 
+           var myChart = new Chart(width: 600, height: 400, theme: ChartTheme.Green)
+          .AddTitle("Bitcoin")
+          .AddSeries(chartType: "column",
+              name: "Criptomoeda",
+              xValue: new[] { "24/10", "25/10", "26/10", "27/10", "28/10" }, xField: "Data",
+              yValues: new[] { "70000", "68000", "62000", "67000", "73200" }, yFields: "Valor")
+          .Write();
+       }
+    </div>
