Adicionando gráfico - apenas base

--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
@@ -1,21 +1,65 @@
 ﻿
-@using System.Web.Helpers
+@{
+    ViewData["Title"] = "Relatórios";
 
-    @{
-        ViewData["Title"] = "Relatórios";
+}
 
-    }
+<h1>@ViewData["Title"]</h1>
 
-    <h1>@ViewData["Title"]</h1>
+<canvas id="graficoBitcoin" width="400" height="150">
+</canvas>
 
-    <div>
-       @{ 
-           var myChart = new Chart(width: 600, height: 400, theme: ChartTheme.Green)
-          .AddTitle("Bitcoin")
-          .AddSeries(chartType: "column",
-              name: "Criptomoeda",
-              xValue: new[] { "24/10", "25/10", "26/10", "27/10", "28/10" }, xField: "Data",
-              yValues: new[] { "70000", "68000", "62000", "67000", "73200" }, yFields: "Valor")
-          .Write();
-       }
-    </div>
+
+@section Scripts {
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
+    <script>
+        $(document)
+            .ready(function () {
+
+                var ctx = document.getElementById('graficoBitcoin').getContext('2d');
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: {
+                        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                        datasets: [{
+                            label: '# of Votes',
+                            data: [12, 19, 3, 5, 2, 3],
+                            backgroundColor: [
+                                'rgba(255, 99, 132, 0.2)',
+                                'rgba(54, 162, 235, 0.2)',
+                                'rgba(255, 206, 86, 0.2)',
+                                'rgba(75, 192, 192, 0.2)',
+                                'rgba(153, 102, 255, 0.2)',
+                                'rgba(255, 159, 64, 0.2)'
+                            ],
+                            borderColor: [
+                                'rgba(255, 99, 132, 1)',
+                                'rgba(54, 162, 235, 1)',
+                                'rgba(255, 206, 86, 1)',
+                                'rgba(75, 192, 192, 1)',
+                                'rgba(153, 102, 255, 1)',
+                                'rgba(255, 159, 64, 1)'
+                            ],
+                            borderWidth: 1
+                        }]
+                    },
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero: true
+                                }
+                            }]
+                        }
+                    }
+                });
+
+            });
+    </script>
+
+}
+
+
+
+
