--- a/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Transacoes/Relatorios.cshtml
@@ -1,12 +1,18 @@
 ﻿
 @{
     ViewData["Title"] = "Relatórios";
+    ViewData["Data"] = DateTime.Now.ToString("dd-MM-yyyy HH:mm");
 
 }
 
 <h1>@ViewData["Title"]</h1>
 
-<canvas id="graficoBitcoin" width="400" height="150">
+<div>
+
+</div>
+<br />
+<h4 class="text-center">Criptomoedas @ViewData["Data"]</h4>
+<canvas id="graficoCriptomoedas" width="400" height="150">
 </canvas>
 
 
@@ -17,34 +23,36 @@
         $(document)
             .ready(function () {
 
-                var ctx = document.getElementById('graficoBitcoin').getContext('2d');
+                var ctx = document.getElementById('graficoCriptomoedas').getContext('2d');
                 var myChart = new Chart(ctx, {
                     type: 'bar',
                     data: {
-                        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                        labels: ['Bitcoin', 'Ethereum', 'Bitcoin Cash', 'XRP', 'PAX Gold', 'Litecoin'],
                         datasets: [{
-                            label: '# of Votes',
-                            data: [12, 19, 3, 5, 2, 3],
+                            data: [78459.21, 2224, 1538, 1, 10892, 314],
                             backgroundColor: [
-                                'rgba(255, 99, 132, 0.2)',
-                                'rgba(54, 162, 235, 0.2)',
-                                'rgba(255, 206, 86, 0.2)',
-                                'rgba(75, 192, 192, 0.2)',
-                                'rgba(153, 102, 255, 0.2)',
-                                'rgba(255, 159, 64, 0.2)'
+                                'rgba(250, 150, 26, 0.2)',
+                                'rgba(107, 108, 109, 0.2)',
+                                'rgba(141, 195, 81, 0.2)',
+                                'rgba(35, 41, 47, 0.2)',
+                                'rgba(250, 244, 15, 0.2)',
+                                'rgba(52, 92, 157, 0.2)'
                             ],
                             borderColor: [
-                                'rgba(255, 99, 132, 1)',
-                                'rgba(54, 162, 235, 1)',
-                                'rgba(255, 206, 86, 1)',
-                                'rgba(75, 192, 192, 1)',
-                                'rgba(153, 102, 255, 1)',
-                                'rgba(255, 159, 64, 1)'
+                                'rgba(250, 150, 26, 1)',
+                                'rgba(107, 108, 109, 1)',
+                                'rgba(141, 195, 81, 1)',
+                                'rgba(35, 41, 47, 1)',
+                                'rgba(250, 244, 15, 1)',
+                                'rgba(52, 92, 157, 1)'
                             ],
                             borderWidth: 1
                         }]
                     },
                     options: {
+                        legend: {
+                            display: false
+                        },
                         scales: {
                             yAxes: [{
                                 ticks: {
