--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
@@ -12,9 +12,13 @@
 
 }
 
-<h1>@ViewData["Title"]</h1>
+@*<h1>@ViewData["Title"]</h1>*@
 
-<div>
+<div class="flex-row">
+
+    <a asp-action="Index" class="btn btn-outline-dark">Todas as Criptomoedas</a>
+    <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+
 </div>
 <br />
 <h4 class="text-center">Valor Por Criptomoeda @ViewData["Data"]</h4>
