--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="ContasClientes" asp-action="Aplicacoes">Aplicações</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Transacoes" asp-action="Relatorios">Relatórios</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Relatorios" asp-action="Index">Relatórios</a>
                         </li>
 
                       }
