--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Index.cshtml
@@ -15,9 +15,13 @@
 @*<h1>@ViewData["Title"]</h1>*@
 
 <div class="flex-row">
-
     <a asp-action="Index" class="btn btn-outline-dark">Todas as Criptomoedas</a>
     <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+    <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+    <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+    <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+    <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+    <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
 
 </div>
 <br />
