--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Xrp.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Xrp.cshtml
@@ -50,7 +50,7 @@
                         scales: {
                             yAxes: [{
                                 ticks: {
-                                    beginAtZero: true
+                                    beginAtZero: false
                                 }
                             }]
                         }
