--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Bitcoin.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Bitcoin.cshtml
@@ -7,10 +7,13 @@
     var valores = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(valoresList));
 }
 
+<br />
+
 <div class="flex-row">
 
-    <a asp-action="Index" class="btn btn-outline-dark">Todas as Criptomoedas</a>
-    <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+    <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Semanal" class="btn btn-outline-dark">Todas as Criptomoedas</a>
+    <a asp-action="Bitcoin" class="btn btn-dark text-white">Bitcoin</a>
     <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
     <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
     <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
