--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/PaxGold.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/PaxGold.cshtml
@@ -7,18 +7,21 @@
     var valores = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(valoresList));
 }
 
-<div class="flex-row">
+<br />
 
-    <a asp-action="Index" class="btn btn-outline-dark">Todas as Criptomoedas</a>
+<div class="flex-row">
+    <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Semanal" class="btn btn-outline-dark">Todas as Criptomoedas</a>
     <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
     <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
     <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
     <a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
-    <a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+    <a asp-action="PaxGold" class="btn btn-dark text-white">PAX Gold</a>
     <a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
-
 </div>
+
 <br />
+
 <h1>@ViewData["Title"]</h1>
 <h4 class="text-center">Últimos 7 Dias</h4>
 <canvas id="graficoBitcoin" width="400" height="150">
