--- a/BlockTechMVC/BlockTechMVC/Views/Relatorios/Semanal.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Relatorios/Semanal.cshtml
@@ -19,14 +19,11 @@
     var litecoin = Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(litecoinList));
 }
 
-
-<div class="flex-row">
-    <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
-    <a asp-action="Semanal" class="btn btn-outline-dark">Últimos 7 dias</a>
-</div>
 <br />
+
 <div>
-    <a asp-action="Index" class="btn btn-outline-dark">Todas as Criptomoedas</a>
+    <a asp-action="Index" class="btn btn-outline-dark">Hoje</a>
+    <a asp-action="Semanal" class="btn btn-dark text-white">Todas as Criptomoedas</a>
     <a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
     <a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
     <a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
