--- a/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/Shared/_Layout.cshtml
@@ -60,6 +60,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Relatorios" asp-action="Index">Relatórios</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="MeusInvestimentos" asp-action="Index">Investimentos</a>
+                        </li>
 
                       }
                     </ul>
