--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
@@ -1,71 +1,12 @@
-﻿@model IEnumerable<BlockTechMVC.Models.Transacao>
-
+﻿
 @{
-    ViewData["Title"] = "Index";
-}
+    var bitcoinQuantidade = ViewBag.QuantidadaTotalBitcoin;
+    var bitcoinValorReal = ViewBag.QuantidadaEmRealBitcoin;
+    var bitcoinInvestimento = ViewBag.ValorInvestidoBitcoin;
+    }
 
-<h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Tipo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Data)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Valor)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CriptomoedaHoje)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ContaCliente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CriptoSaldo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Saldo)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Tipo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Data)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Valor)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CriptomoedaHoje.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContaCliente.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CriptoSaldo.Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Saldo.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<h2>Quantidade de Bitcoin: @bitcoinQuantidade</h2>
+<h2>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h2>
+<h2>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h2>
