--- a/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
+++ b/BlockTechMVC/BlockTechMVC/Views/MeusInvestimentos/Index.cshtml
@@ -3,10 +3,30 @@
     var bitcoinQuantidade = ViewBag.QuantidadaTotalBitcoin;
     var bitcoinValorReal = ViewBag.QuantidadaEmRealBitcoin;
     var bitcoinInvestimento = ViewBag.ValorInvestidoBitcoin;
+    var saldoSemInvestimento = ViewBag.SaldoSemInvestimento;
+    var dinheiroTotalContaRS = ViewBag.DinheiroTotalContaRS;
+}
+
+
+<a asp-action="Index" class="btn btn-outline-dark">Investimentos</a>
+<a asp-action="Bitcoin" class="btn btn-outline-dark">Bitcoin</a>
+<a asp-action="Ethereum" class="btn btn-outline-dark">Ethereum</a>
+<a asp-action="BitcoinCash" class="btn btn-outline-dark">Bitcoin Cash</a>
+<a asp-action="Xrp" class="btn btn-outline-dark">XRP</a>
+<a asp-action="PaxGold" class="btn btn-outline-dark">PAX Gold</a>
+<a asp-action="Litecoin" class="btn btn-outline-dark">Litecoin</a>
+
+@if (!User.IsInRole("Admin"))
+{
+    <h2>Não investido: R$ @saldoSemInvestimento</h2>
+    <h2>Saldo Total na Conta: R$ @dinheiroTotalContaRS</h2>
+
+    if (bitcoinInvestimento > 0)
+    {
+        <h2>Quantidade de Bitcoin: @bitcoinQuantidade</h2>
+        <h2>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h2>
+        <h2>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h2>
     }
 
 
-
-<h2>Quantidade de Bitcoin: @bitcoinQuantidade</h2>
-<h2>Valor Atual - Bitcoin: R$ @bitcoinValorReal</h2>
-<h2>Valor Investido - Bitcoin: R$ @bitcoinInvestimento</h2>
+}
